# MatrixLibary

./: .README  CMakeLists.txt  README.md
src/: matrix.cpp  matrix.h  vector.cpp  vector.h
test/: CMakeLists.txt  matrix_tests.cpp  vector_tests.cpp
